kube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: jaisor-go-rest-test
  name: jaisor-go-rest-test
  namespace: default
spec:
  clusterIP: 10.27.245.101
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30450
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello-node
  sessionAffinity: None
  type: NodePort
