kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jgrt-ingress
spec:
  backend:
    serviceName: go-rest-test
    servicePort: 8090
